[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Luffy (1).png" type="Texture" id=1]
[ext_resource path="res://Hitboxes and Hurtboxes/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Luffy.gd" type="Script" id=3]
[ext_resource path="res://Music and Sounds/One piece sound effect[Gomu gomu no pistol].mp3" type="AudioStream" id=4]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 20, 48, 73 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 20, 48, 73 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 20, 48, 73 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 144, 20, 48, 73 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 20, 48, 73 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 240, 20, 48, 73 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 110, 1833, 55, 76 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 168, 1833, 84, 76 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 254, 1833, 127, 76 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 388, 1833, 97, 76 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 498, 1833, 110, 76 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 616, 1833, 93, 76 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 709, 1833, 93, 76 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 813, 1833, 91, 76 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 923, 1833, 86, 76 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1023, 1833, 123, 76 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1156, 1833, 57, 76 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 1213, 1833, 57, 76 )

[sub_resource type="SpriteFrames" id=19]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=20]
radius = 48.0002
height = 216.0

[sub_resource type="CircleShape2D" id=21]
radius = 231.138

[sub_resource type="RectangleShape2D" id=23]
extents = Vector2( 11.5, 31.25 )

[node name="Luffy" type="KinematicBody2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 365, 224 )
scale = Vector2( 2.37273, 2.37273 )
frames = SubResource( 19 )
animation = "attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 405, 235 )
rotation = 1.57079
shape = SubResource( 20 )

[node name="attack" type="Area2D" parent="."]
position = Vector2( 351, 181 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="attack"]
position = Vector2( 63, 45 )
shape = SubResource( 21 )

[node name="Hurtbox" parent="." instance=ExtResource( 2 )]
position = Vector2( 353, 176 )
collision_layer = 16
collision_mask = 2

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 34.5, 55.25 )
shape = SubResource( 23 )

[node name="Health" type="ColorRect" parent="."]
margin_left = 376.0
margin_top = 163.0
margin_right = 395.0
margin_bottom = 164.0
color = Color( 0.262745, 0.941176, 0.0941176, 1 )

[node name="Red" type="ColorRect" parent="Health"]
margin_left = 1.0
margin_right = 19.0
margin_bottom = 1.0
color = Color( 0.592157, 0.207843, 0.168627, 1 )

[node name="Bar" type="ColorRect" parent="Health"]
margin_left = 1.0
margin_right = 19.0
margin_bottom = 1.0
color = Color( 0.262745, 0.941176, 0.0941176, 1 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 287, 178 )

[node name="gumo" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="body_entered" from="attack" to="." method="_on_attack_body_entered"]
[connection signal="body_exited" from="attack" to="." method="_on_attack_body_exited"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]

[editable path="Hurtbox"]
